-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 3.5.0
-
None
With the 5.6 branch of Qt, deploying to a device does not work from Qt Creator. The application is successfully installed to the device, but it does not launch.
The following message is displayed in the compile output:
Package deploy: Running command "/home/eskil/android-sdk-linux/platform-tools/adb -s 3004158d90098100 pull /system/bin/sh: readlink: not found /home/eskil/dev/qt5-android-5/base/examples/widgets/richtext/textedit/app_process"
The device was a Samsung Galaxy Tab 3 lite 7'' (SM-T110)
- relates to
-
QTCREATORBUG-14974 readlink not found from Android 4.1.2 version
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-15006 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
125448,2 | Android: Change pulling of app_process binary to not use readLink | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |